--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.35",
+    "@material-ui/x-license": "^4.0.0-alpha.36",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-jwt": "^6.0.0",
