--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.0",
+    "react-select": "^4.3.1",
     "react-tabs": "^3.2.2",
     "reactstrap": "^8.0.0",
     "styled-components": "^5.3.0"
