--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@inovua/reactdatagrid-enterprise": "^4.1.24",
     "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.35",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/x-license": "^4.0.0-alpha.36",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.17.0",
