--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-scripts": "^3.4.0",
     "react-select": "^4.3.1",
     "react-tabs": "^3.2.2",
+    "react-tradingview-widget": "^1.3.2",
     "reactstrap": "^8.0.0",
     "stripe": "^8.169.0",
     "styled-components": "^5.3.0"
